<?xml version="1.0"?>
<package format="2">
  <name>monitoring</name>
  <version>1.0.0</version>
  <description>This package allows to monitor a robot system. It supplys different monitors for the computer system and ros</description>
  <maintainer email="schotte93@gmail.com"></maintainer>
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>monitoring_core</exec_depend>
  
  <export>
    <metapackage />
  </export>
</package>