<?xml version="1.0"?>
<package format="2">
  <name>monitoring_bridge</name>
  <version>0.0.0</version>
  <description>The monitoring_bridge package</description>

  <maintainer email="schotte93@gmail.com">Matthias Jakob</maintainer>
  <license>TODO</license>
  <author email="schotte93@gmail.com">Matthias Jakob</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>monitoring_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>monitoring_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>monitoring_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>



  <export>

  </export>
</package>
