<?xml version="1.0"?>
<package format="2">
  <name>monitoring_core</name>
  <version>0.0.0</version>
  <description>The monitoring_core package</description>


  <maintainer email="carstensen@rts.uni-hannover.de">Jan Carstensen</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/ros_monitoring</url> -->

  <author email="jane.doe@example.com">Matthias Jakob</author>
  <author email="carstensen@rts.uni-hannover.de">Jan Carstensen</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>monitoring_msgs</build_depend>

  <exec_depend>monitoring_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  
  <build_export_depend>roscpp</build_export_depend>
</package>
