<?xml version="1.0"?>
<package format="2">
  <name>monitoring_core</name>
  <version>0.0.0</version>
  <description>The monitoring_core package contains the libraries for C++ and python. Which help to extend the monitoring functionality</description>

  <maintainer email="carstensen@rts.uni-hannover.de">Jan Carstensen</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/ros_monitoring</url> -->

  <author email="schotte93@gmail.com">Matthias Jakob</author>
  <author email="carstensen@rts.uni-hannover.de">Jan Carstensen</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>monitoring_msgs</build_depend>

  <exec_depend>monitoring_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>

  <test_depend>rosunit</test_depend>
  <test_depend>rostest</test_depend>
  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>monitoring_msgs</build_export_depend>
</package>
