<?xml version="1.0"?>
<package format="2">
  <name>monitoring_examples</name>
  <version>0.0.0</version>
  <description>The monitoring_examples package contains examples/tutorials for the usage of the entire meta package</description>

  <maintainer email="carstensen@rts.uni-hannover.de">Jan Carstensen</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>monitoring_core</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>monitoring_core</build_export_depend>
  <build_export_depend>rosccp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>monitoring_core</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export>
  </export>
</package>
