<?xml version="1.0"?>
<package format="2">
  <name>monitoring_monitors_ros</name>
  <version>1.0.0</version>
  <description>The monitoring_monitors_ros package cotains monitors to observe ros specific parts of the systems e.g.: nodes, topics, tf</description>

  <maintainer email="carstensen@rts.uni-hannover.de">Jan Carstensen</maintainer>

  <license>BSD</license>

  <author email="schotte93@gmail.com">Matthias Jakob</author>
  <author email="carstensen@rts.uni-hannover.de">Jan Carstensen</author>
  <author email="michael.lange@stud.uni-hannover.de">Michael Lange</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>monitoring_core</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>monitoring_core</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>monitoring_core</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <test_depend>rosunit</test_depend>
  <test_depend>rostest</test_depend>
  
  <export>
  </export>
</package>
