<?xml version="1.0"?>
<package format="2">
  <name>monitoring_msgs</name>
  <version>0.0.0</version>

  <description>The monitoring msgs</description>

  <maintainer email="carstensen@rts.uni-hannover.de">Jan Carstensen</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/ros_monitoring</url> -->

  <author email="schotte93@gmail.com">Matthias Jakob</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
