<package>
  <name>monitoring_rqt</name>
  <version>0.5.8</version>
  <description>Forked from rqt_robot_monitor
  </description>
  <maintainer email="carstensen@rts.uni-hannover.de">Jan Carstensen</maintainer>
 

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>monitoring_msgs</run_depend>
  <run_depend version_gte="0.2.19">python_qt_binding</run_depend>
  <run_depend>python-rospkg</run_depend>
  <run_depend>qt_gui</run_depend>
  <run_depend>qt_gui_py_common</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rqt_py_common</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>
  <run_depend>rqt_bag</run_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml" />
  </export>
</package>
