<?xml version="1.0"?>
<package format="2">
  <name>monitoring_speech</name>
  <version>0.0.0</version>
  <description>The monitoring_speech package</description>

  <maintainer email="schotte93@gmail.com">Matthias Jakob</maintainer>

  <license>TODO</license>

  <author email="schotte93@gmail.com">Matthias Jakob</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
